--- a/html/input.html
+++ b/html/input.html
@@ -28,10 +28,25 @@
       ><img src="../imgs/logo.png" alt="로고 사진" class="logo"
     /></a>
 
+    <div id="top">
+      <p id="title"><제목을 입력하세요></p>
+      <input
+        type="text"
+        id="mainTitle"
+        placeholder="30글자 이내로 입력하세요."
+      />
+    </div>
+
     <div id="box">
       <div id="content">
         <h4><내용을 입력하세요></h4>
-        <textarea name="" id="text" cols="30" rows="10"></textarea>
+        <textarea
+          name=""
+          id="text"
+          cols="30"
+          rows="10"
+          placeholder="최대 65,535까지 입력하세요."
+        ></textarea>
 
         <!-- file -->
         <h4><사진을 추가하세요></h4>
