Add href and send button

--- a/html/input.html
+++ b/html/input.html
@@ -35,6 +35,10 @@
         id="mainTitle"
         placeholder="30글자 이내로 입력하세요."
       />
+
+      <a href="../html/index.html"
+        ><input type="submit" value="send" id="finish"
+      /></a>
     </div>
 
     <div id="box">
