Add side text hover animaition

--- a/html/index.html
+++ b/html/index.html
@@ -23,11 +23,13 @@
           <li><img src="../imgs/banner_family.jpg" /></li>
         </ul>
       </div>
-      <p class=typing-txt>당신의 추억을 선물하세요</p>
+      <p class=typing-txt>당신의 추억을 선물하세요.</p>
       <p class="typing"></p>
-      <p class="text">바쁜 <span>시간</span>속에 잊혀져</br>
-      챙기지 못했던 <span>인연</span>들에게</br>
-      그때의 <span>추억</span>들을 선물해주세요</br>
+      <div id="textBox">
+      <p class="text">바쁜 <span>시간</span>속에 잊혀져</p>
+      <p class="text">챙기지 못했던 <span>인연</span>들에게</p>
+      <p class="text">그때의 <span>추억</span>들을 선물해주세요</p>
+    </div>
 
       </p>
       <button class="into-button">
