Fixed button layout

--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
 
       </p>
       <button class="into-button">
-        <a href="input.html">추억 기록하러 가기</a>
+        <a href="input.html">For You</a>
       </button>
     </div>
 
